# msh-rw

./: .gitattributes  .gitignore  Cargo.toml  README.md
props/v2/: bad-header.msh  basic-twice.msh  basic.msh  bin-tetra.msh  tetra-pgroup.msh  tetra.geo  tetra.msh  weird-groups.msh
props/v4/: empty-bin.msh  empty.msh
src/: lib.rs  main.rs  mesh.rs  parser.rs
src/snapshots/: mosh__parser__tests__msh2__bad_header.snap  mosh__parser__tests__msh2__msh2_ascii_header.snap  mosh__parser__tests__msh2__msh2_binary_header.snap  mosh__parser__tests__msh2__node_msh2.snap  mosh__parser__tests__msh2__some_nodes.snap  mosh__parser__tests__msh2__unix_line_endings.snap  mosh__parser__tests__msh2_binary_header.snap  mosh__parser__tests__msh4__msh4_ascii_header.snap  mosh__parser__tests__msh4__msh4_binary_header.snap  mosh__parser__tests__msh4_ascii_header.snap  mosh__parser__tests__msh4_binary_header.snap  mosh__parser__tests__node_msh2.snap  mosh__parser__tests__trailing_spaces.snap  mosh__parser__tests__unix_line_endings.snap  mosh__tests__basic_msh2_ascii.snap  msh_parser__parser__tests__bad_header.snap  msh_parser__parser__tests__msh2_binary_header.snap  msh_parser__parser__tests__msh4_ascii_header.snap  msh_parser__parser__tests__msh4_binary_header.snap  msh_parser__parser__tests__unix_line_endings.snap  msh_parser__tests__msh_json.snap  msh_parser__tests__write_empty_msh2_ascii.snap  msh_parser__tests__write_empty_msh4_ascii.snap
