[package]
name = "mosh"
version = "0.1.0"
authors = ["Max Orok <maxwellorok@gmail.com>"]
edition = "2018"
exclude = ["props", "src/snapshots"]

[dependencies]
nom = "5.1.1"
thiserror = "1.0.15"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
insta = "0.16.0"
serde_json = "1.0.52"
