[package]
name = "msh-rw"
version = "0.1.0"
description = "Read and write Gmsh msh files"
authors = ["Max Orok <maxwellorok@gmail.com>"]
edition = "2018"
exclude = ["props", "src/snapshots"]
repository = "https://github.com/mxxo/msh-rw"
license = "MIT OR Apache-2.0"


[dependencies]
nom = "5.1.1"
thiserror = "1.0.15"
serde = { version = "1.0", optional = true, features = ["derive"] }
bstr = "0.2.13"

[dev-dependencies]
insta = "0.16.0"
serde_json = "1.0.52"
